# RV32I-EMU

./: CMakeLists.txt  README-ES.md  README.md  main.cpp  test.elf  test_addi.S
core/CPU/: CPU.cpp  CPU.h
core/Instructionset/: Instructionset.cpp  Instructionset.h
core/MMU/: MMU.cpp  MMU.h
core/Syscalls/: Syscalls.cpp  Syscalls.h
core/debug/: DebugUI.cpp  DebugUI.h  Logger.h
core/test/: rv32ui-p-add  rv32ui-p-addi  rv32ui-p-and  rv32ui-p-andi  rv32ui-p-auipc  rv32ui-p-beq  rv32ui-p-bge  rv32ui-p-bgeu  rv32ui-p-blt  rv32ui-p-bltu  rv32ui-p-bne  rv32ui-p-fence_i  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-lb  rv32ui-p-lbu  rv32ui-p-ld_st  rv32ui-p-lh  rv32ui-p-lhu  rv32ui-p-lui  rv32ui-p-lw  rv32ui-p-ma_data  rv32ui-p-or  rv32ui-p-ori  rv32ui-p-sb  rv32ui-p-sh  rv32ui-p-simple  rv32ui-p-sll  rv32ui-p-slli  rv32ui-p-slt  rv32ui-p-slti  rv32ui-p-sltiu  rv32ui-p-sltu  rv32ui-p-sra  rv32ui-p-srai  rv32ui-p-srl  rv32ui-p-srli  rv32ui-p-st_ld  rv32ui-p-sub  rv32ui-p-sw  (+2 more)
core/test/test-m/: rv32um-p-div  rv32um-p-divu  rv32um-p-mul  rv32um-p-mulh  rv32um-p-mulhsu  rv32um-p-mulhu  rv32um-p-rem  rv32um-p-remu
